  filelist downloads as well
* Upgraded to WTL 7.1, should fix a few UI issues
* Fixed brightness of compressed transfer progress bars
* Fixed a crash with badly formatted compressed transfer requests
* Some work on memory managment, dramatically improving DC++'s behaviour with large queues / shares


 -- 0.305 2003-12-04 --
* Fixed disappearing queue items bug
* Fixed displaying of upload compression in progress bar
* Added compression ratio column and %[actualsize] and %[actualsizeshort] to log formats available
* Fixed doubled name when downloading directories from search frame
* Fixed a mem leak for safe transfers
* Fixed a crash during downloads
* Fixed speed problems with user list
* Added "open download directory" to file and tray menu
* Shift-clicking tab will close window (thanks twink)
* Added support for $UserIP, %[ip] as user command parameter and server side ip detection (automatically used
  if the ip field in settings is blank)
* Transfer bar colors updated and user-configurable (thanks gargoyle)
* Fixed possibility to share same folder twice (thanks theparaniodone)
* Fixed translations of kick & redirect user
* Fixed missing subdirs when moving directories in the queue
* Really fixed hublist space trimming =)
* Added ".wmv" and ".ogm" as video extensions
* Fixed some issues with same-named fav users
* Fixed small mem leak in fav users
* Max download slots default changed to 3
* Max 3 slots more than max download slots are used for highest priority downloads
* Added option to automatically download filelist and match it on autosearch match. This will dramatically speed up
  autosearching, lessening the strain on the hubs as less searches have to be done.
* Added accelerator for filtering in public hubs (thanks gargoyle)
* Fixed some translations (thanks ciber)
* Added "downloaded bytes" to queue (thanks ciber)
* Fixed refresh file list from main menu