@@ -190,25 +190,51 @@ bool SimpleXML::findChild(const string& aName) throw() {
 	return false;
 }
 
-string::size_type SimpleXMLReader::loadAttribs(const string& name, const string& tmp, string::size_type start) throw(SimpleXMLException) {
+inline bool getData(SimpleXMLReader::CallBack* cb, string& tmp, string::size_type& i, string::size_type& start) {
+	start -= i;
+	tmp.erase(0, i);
+	i = 0;
+	return cb->getData(tmp);
+}
+inline void checkN(SimpleXMLReader::CallBack* cb, string& tmp, string::size_type& i, string::size_type& start, string::size_type& j, string::size_type n) {
+	if(tmp.size() - i <= n) {
+		j -= i;
+		getData(cb, tmp, i, start);
+	}
+}
+
+
+string::size_type SimpleXMLReader::loadAttribs(const string& name, string& tmp, string::size_type start) throw(SimpleXMLException) {
 	string::size_type i = start;
 	string::size_type j;
 	for(;;) {
-		j = tmp.find('=', i);
-		if(j == string::npos) {
+		while((j = tmp.find('=', i)) == string::npos) {
+			if(getData(cb, tmp, i, start))
+				continue;
 			throw SimpleXMLException("Missing '=' in " + name);
 		}
+		checkN(cb, tmp, i, start, j, 16);
+
 		if(tmp[j+1] != '"' && tmp[j+1] != '\'') {
 			throw SimpleXMLException("Invalid character after '=' in " + name);
 		}
+
 		string::size_type x = j + 2;
-		string::size_type y = tmp.find(tmp[j+1], x);
-		if(y == string::npos) {
+		string::size_type y;
+		while((y = tmp.find(tmp[j+1], x)) == string::npos) {
+			string::size_type i2 = i;
+			if(getData(cb,tmp, i, start)) {
+				x-= i2;
+				j-= i2;
+				continue;
+			}
 			throw SimpleXMLException("Missing '" + string(1, tmp[j+1]) + "' in " + name);
 		}
 		// Ok, we have an attribute...
 		attribs.push_back(make_pair(tmp.substr(i, j-i), tmp.substr(x, y-x)));
 		SimpleXML::escape(attribs.back().second, true, true);
+
+		checkN(cb, tmp, i, start, j, 16);
 
 		i = tmp.find_first_not_of(' ', y + 1);
 		if(tmp[i] == '/' || tmp[i] == '>')
@@ -216,21 +242,24 @@ string::size_type SimpleXMLReader::loadAttribs(const string& name, const string&
 	}
 }
 
-string::size_type SimpleXMLReader::fromXML(const string& n, const string& tmp, string::size_type start, bool inTag) throw(SimpleXMLException) {
+string::size_type SimpleXMLReader::fromXML(string& tmp, const string& n, string::size_type start, bool inTag) throw(SimpleXMLException) {
 	string::size_type i = start;
 	string::size_type j;
 
 	bool hasChildren = false;
-	dcassert(tmp.size() > 0);
 	
 	for(;;) {
-		j = tmp.find('<', i);
-		if(j == string::npos) {
+		while((j = tmp.find('<', i)) == string::npos) {
+			if(getData(cb, tmp, i, start))
+				continue;
+
 			if(inTag) {
 				throw SimpleXMLException("Missing end tag in " + n);
 			}
 			return tmp.size();
 		}
+
+		checkN(cb, tmp, i, start, j, 16);
 
 		// Check that we have at least 3 more characters as the shortest valid xml tag is <a/>...
 		if((j + 3) > tmp.size()) {
@@ -241,26 +270,32 @@ string::size_type SimpleXMLReader::fromXML(const string& n, const string& tmp, s
 
 		if(tmp[i] == '?') {
 			// <? processing instruction ?>, ignore...
-			i = tmp.find("?>", i);
-			if(i == string::npos) {
+			while((j = tmp.find("?>", i)) == string::npos) {
+				if(getData(cb,tmp,i, start))
+					continue;
 				throw SimpleXMLException("Missing '?>' in " + n);
 			}
-			i += 2;
+			i = j + 2;
 			continue;
 		}
 
 		if(tmp[i] == '!' && tmp[i+1] == '-' && tmp[i+2] == '-') {
 			// <!-- comment -->, ignore...
-			i = tmp.find("-->", i);
-			if(i == string::npos) {
+			while((j = tmp.find("-->", i)) == string::npos) {
+				if(getData(cb, tmp, i, start))
+					continue;
 				throw SimpleXMLException("Missing '-->' in " + n);
 			}
+			i = j + 3;
 			continue;
 		}
 
 		// Check if we reached the end tag
 		if(tmp[i] == '/') {
 			i++;
+			
+			checkN(cb, tmp, i, start, j, n.length());
+
 			if( (tmp.compare(i, n.length(), n) == 0) && 
 				(tmp[i + n.length()] == '>') )
 			{
@@ -277,19 +312,22 @@ string::size_type SimpleXMLReader::fromXML(const string& n, const string& tmp, s
 		}
 
 		// Alright, we have a real tag for sure...now get the name of it.
-		j = tmp.find_first_of(" />", i);
-		if(j == string::npos) {
+		while((j = tmp.find_first_of(" />", i)) == string::npos) {
+			if(getData(cb, tmp, i, start))
+				continue;
+
 			throw SimpleXMLException("Missing '>' in " + n);
 		}
 
 		string name = tmp.substr(i, j-i);
 		hasChildren = true;
-		if(tmp[j] == ' ')
-			j = tmp.find_first_not_of(' ', j+1);
-		
-		if(j == string::npos) {
-			throw SimpleXMLException("Missing '>' in " + name);
-		}
+		if(tmp[j] == ' ') {
+			while((j = tmp.find_first_not_of(' ', j+1)) == string::npos) {
+				if(getData(cb, tmp, i, start))
+					continue;
+				throw SimpleXMLException("Missing '>' in " + name);
+			}
+		}		
 
 		attribs.clear();
 		if(tmp[j] != '/' && tmp[j] != '>') {
@@ -300,7 +338,7 @@ string::size_type SimpleXMLReader::fromXML(const string& n, const string& tmp, s
 		if(tmp[j] == '>') {
 			// This is a real tag with data etc...
 			cb->startTag(name, attribs, false);
-			j = fromXML(name, tmp, j+1, true);
+			j = fromXML(tmp, name, j+1, true);
 			cb->endTag(name, data);
 		} else {
 			// A simple tag (<xxx/>
@@ -337,14 +375,14 @@ void SimpleXML::addChildAttrib(const string& aName, const string& aData) throw(S
 	(*currentChild)->attribs.push_back(make_pair(aName, aData));
 }
 
-void SimpleXML::fromXML(const string& aXML) throw(SimpleXMLException) {
+void SimpleXML::fromXML(string aXML) throw(SimpleXMLException) {
 	if(!root.children.empty()) {
 		delete root.children[0];
 		root.children.clear();
 	}
 
 	TagReader t(&root);
-	SimpleXMLReader(&t).fromXML(Util::emptyString, aXML);
+	SimpleXMLReader(&t).fromXML(aXML);
 	
 	if(root.children.size() != 1) {
 		throw SimpleXMLException("Invalid XML file, missing or multiple root tags");
@@ -356,6 +394,6 @@ void SimpleXML::fromXML(const string& aXML) throw(SimpleXMLException) {
 
 /**
  * @file
- * $Id: SimpleXML.cpp,v 1.22 2003/12/17 13:53:07 arnetheduck Exp $
+ * $Id: SimpleXML.cpp,v 1.23 2003/12/21 21:41:15 arnetheduck Exp $
  */
 
